--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Popins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 :root {
   --primary-color: #22254b;
@@ -11,7 +11,7 @@
 
 body {
   background-color: var(--primary-color);
-  font-family: 'Popins', sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
 }
 
@@ -44,6 +44,7 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .movie {
@@ -83,9 +84,11 @@ main {
 .movie-info span.green {
   color: lightgreen;
 }
+
 .movie-info span.orange {
   color: orange;
 }
+
 .movie-info span.red {
   color: red;
 }
@@ -99,6 +102,7 @@ main {
   right: 0;
   max-height: 100%;
   transform: translateY(101%);
+  overflow-y: auto;
   transition: transform 0.3s ease-in;
 }
 
